--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ groq==0.4.2
 python-dotenv==1.0.0
 plotly==5.17.0
 altair==5.1.2
-fastapi==0.110.2
-uvicorn==0.29.0
-langgraph==0.0.40
-psycopg2-binary==2.9.9 # For optional PostgreSQL support 
+fastapi==0.104.1
+uvicorn==0.24.0
+langgraph==0.5.0
+psycopg2-binary==2.9.9 # For optional PostgreSQL support
+requests==2.31.0
+langchain-core>=0.1.0 
